--- a/message/src/main/res/layout/delegate_message.xml
+++ b/message/src/main/res/layout/delegate_message.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/MatchMatch.Vertical">
 
-    <com.sukaidev.common.widget.HeaderBar
+    <com.sukaidev.core.widget.HeaderBar
         style="@style/MatchWrap"
         app:isShowBack="false"
         app:titleText="消息" />
